Rewrote InfoShift as a wrapper of Shift.